--- a/_includes/sc/schedule.html
+++ b/_includes/sc/schedule.html
@@ -1,3 +1,5 @@
+<!-- Schedule is removed for now. When schedule is confirmed, please update this page. -->
+<!--
 <div class="row">
   <div class="col-md-6">
     <h3>Day 1</h3>
@@ -26,3 +28,4 @@
     </table>
   </div>
 </div>
+-->
