--- a/_includes/sc/syllabus.html
+++ b/_includes/sc/syllabus.html
@@ -12,16 +12,16 @@
     </ul>
   </div>
   <div class="col-md-6">
-    <h3 id="syllabus-python">Programming in Python</h3>
+    <h3 id="syllabus-python">Plotting and Programming in Python</h3>
     <ul>
+      <li>Python Basics</li>
       <li>Using Libraries</li>
-      <li>Working with Arrays</li>
+      <li>Working with DataFrames</li>
       <li>Reading and Plotting Data</li>
       <li>Creating and Using Functions</li>
       <li>Loops and Conditionals</li>
-      <li>Defensive Programming</li>
-      <li>Using Python from the Command Line</li>
-      <li><a href="{{site.swc_pages}}/python-novice-inflammation/reference">Reference...</a></li>
+      <li>Programming Style</li>
+      <li><a href="{{site.swc_pages}}/python-novice-gapminder/reference">Reference...</a></li>
     </ul>
   </div>
   <!--
